[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
modulate = Color( 1, 0.301961, 0.678431, 1 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="." to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
